Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/SPAM_BlockList__c.object-meta.xml
<CustomObject>
    <label>SPAM BlockList</label>
    <nameField>
        <displayFormat>SPAM-{000000}</displayFormat>
        <label>SPAM BlockList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPAM BlockList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>