Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/fields/Block_Domain__c.field-meta.xml
<CustomField>
    <fullName>Block_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Domain</label>
    <type>Checkbox</type>
</CustomField>