Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/fields/fxDomain__c.field-meta.xml
<CustomField>
    <fullName>fxDomain__c</fullName>
    <formula>IF (TEXT(Type__c)=&#39;Email&#39;, SUBSTITUTE(Spam_Value__c , LEFT(Spam_Value__c , FIND(&quot;@&quot;, Spam_Value__c )), NULL),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxDomain</label>
    <type>Text</type>
</CustomField>