Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/fields/Spam_Value__c.field-meta.xml
<CustomField>
    <fullName>Spam_Value__c</fullName>
    <defaultValue>&#39;BLANK&#39;</defaultValue>
    <description>This field will either be an email or a subject. Look at the TYPE field to know what it means</description>
    <externalId>true</externalId>
    <inlineHelpText>This field will either be an email or a subject. Look at the TYPE field to know what it means</inlineHelpText>
    <label>Spam Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>