Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/listViews/SPAM_Blocklist_Email.listView-meta.xml
<ListView>
    <fullName>SPAM_Blocklist_Email</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Spam_Value__c</columns>
    <columns>fxDomain__c</columns>
    <columns>Inactive__c</columns>
    <columns>Block_Domain__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <label>SPAM Blocklist (Email)</label>
</ListView>