Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/listViews/SPAM_Blocklist_QUICK_FILTER.listView-meta.xml
<ListView>
    <fullName>SPAM_Blocklist_QUICK_FILTER</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Spam_Value__c</columns>
    <columns>fxDomain__c</columns>
    <columns>Inactive__c</columns>
    <columns>Block_Domain__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Spam_Value__c</field>
        <operation>contains</operation>
        <value>postmaster</value>
    </filters>
    <label>SPAM Blocklist (*QUICK FILTER*)</label>
</ListView>