Perkin-UAT/force-app/main/default/objects/SPAM_BlockList__c/listViews/SPAM_Blocklist_Recently_Created.listView-meta.xml
<ListView>
    <fullName>SPAM_Blocklist_Recently_Created</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Spam_Value__c</columns>
    <columns>fxDomain__c</columns>
    <columns>Inactive__c</columns>
    <columns>Block_Domain__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>SPAM Blocklist (Recently Created)</label>
</ListView>